<resources>
    <string name="app_name">BCIcare</string>
    <!--start_base-->
    <string name="label_bcicare">BCIcare</string>
    <string name="label_starting">开启您的智联脑电医疗服务之旅</string>
    <string name="desc_bg">background</string>
    <string name="desc_logo1">logo</string>

    <!--activity_start-->
    <string name="btn_toStart">开始</string>
    <string name="desc_logo2">logo2</string>
    <string name="label_brain">BrainManager</string>

    <!--activity_login-->
    <string name="label_login">登录</string>
    <string name="hint_mail">&#160;&#160;邮箱</string>
    <string name="hint_password">&#160;&#160;密码</string>
    <string name="label_remember_pd">记住密码</string>
    <string name="btn_forgot_pd">忘记密码?</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>

    <!--icons-->
    <string name="icon_open_arm_line" translatable="false">&#xeca2;</string>
    <string name="icon_skull_2_line" translatable="false">&#xf795;</string>
    <string name="icon_tong_ji" translatable="false">&#xe791;</string>
    <string name="icon_paper_plane_l" translatable="false">&#xe645;</string>
    <string name="icon_md_poll" translatable="false">&#xe626;</string>
    <string name="icon_danger" translatable="false">&#xe61c;</string>

    <!--activity_main-->
    <string name="desc_avatars">avatars</string>
    <string name="label_edit_info">编辑个人信息</string>
    <string name="desc_qrcode">QRCode</string>
    <string name="label_status">状态</string>
    <string name="label_feeling">心情</string>
    <string name="label_fatigue">疲劳</string>
    <string name="btn_contact">联系主治医师</string>
    <string name="btn_explain">数值说明</string>
    <string name="label_fatigue_title">12h疲劳检测曲线</string>
    <string name="label_feeling_title">8h情感检测曲线</string>

    <!--dialog_digital_explain-->
    <string name="label_digital_explain">数值说明</string>
    <string name="label_digital_explain_detail">1代表抑郁\n2代表失落\n3代表平静\n4代表高兴\n5代表激动\n6代表愤怒</string>
    <string name="label_ok">好的</string>

    <!--activity_personal_data-->
    <string name="desc_avatars_apd">头像</string>
    <string name="label_change_avatars">更换头像</string>
    <string name="label_real_name">姓名</string>
    <string name="label_gender">性别</string>
    <string name="label_patient_type">患者类型</string>
    <string name="label_attending_doctor">主治医师</string>
    <string name="label_medicine_method">服药方法</string>
    <string name="label_device_ip">设备IP</string>
    <string name="hint_guardian_mode_on">已开启监护人模式</string>
    <string name="hint_guardian_mode_off">已关闭监护人模式</string>
    <string name="label_guardian_mode">监护人模式</string>
    <string name="label_guardian_info">监护人信息</string>
    <string name="label_guardian_name">姓名</string>
    <string name="label_guardian_phone">手机</string>
    <string name="btn_logout">退出登录</string>


</resources>