<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="@dimen/material_emphasis_medium"
    android:background="@drawable/bg_digital_explain"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_digital_explain"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/label_digital_explain_detail"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/tv_digital_explain"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/label_ok"
        android:textColor="#0076FF"
        android:textSize="17sp" />


</LinearLayout>